Update clustering and queuing analysis.

--- a/nbs/queuing.ipynb
+++ b/nbs/queuing.ipynb
@@ -139,6 +139,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting a ballpark figure for parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dask.delayed\n",
+    "def run_single_class_trial(data, prop, num_servers, seed, max_time=365*3):\n",
+    "\n",
+    "    ciw.seed(seed)\n",
+    "    queue_params = get_queue_params(data, prop)\n",
+    "\n",
+    "    N = ciw.create_network(\n",
+    "        arrival_distributions = [Exponential(params[\"arrival\"])],\n",
+    "        service_distributions = [Exponential(params[\"service\"])],\n",
+    "        number_of_servers=[num_servers],\n",
+    "    )\n",
+    "\n",
+    "    Q = ciw.Simulation(N)\n",
+    "    Q.simulate_until_max_time(max_time)\n",
+    "\n",
+    "    records = Q.get_all_records()\n",
+    "    results = pd.DataFrame(\n",
+    "        [r for r in records if max_time * 0.25 < r.arrival_date < max_time * 0.75]\n",
+    "    )\n",
+    "\n",
+    "    results[\"total_time\"] = results[\"exit_date\"] - results[\"arrival_date\"]\n",
+    "    results[\"service_prop\"] = results[\"customer_class\"].apply(lambda x: props[x])\n",
+    "    results[\"num_servers\"] = num_servers\n",
+    "    results[\"seed\"] = seed\n",
+    "\n",
+    "    distance = stats.wasserstein_distance(results[\"total_time\"], copd[\"true_los\"])\n",
+    "\n",
+    "    return results, prop, num_servers, seed, distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running a full parameter estimation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
