Update and clean notebooks.

--- a/nbs/scenarios.ipynb
+++ b/nbs/scenarios.ipynb
@@ -170,12 +170,9 @@
     "    original_queues = dask.compute(*tasks, scheduler=\"processes\", num_workers=6)\n",
     "\n",
     "original_results = [get_simulation_results(Q, max_time) for Q in original_queues]\n",
-    "original_utilisations = [get_mean_server_utilisation(Q) for Q in original_queues]\n",
     "\n",
-    "original_utilisation = np.mean(original_utilisations)\n",
-    "original_min_time = np.min([result[\"system_time\"].min() for result in original_results])\n",
-    "original_mean_time = np.mean([result[\"system_time\"].mean() for result in original_results])\n",
-    "original_max_time = np.max([result[\"system_time\"].max() for result in original_results])\n"
+    "original_utilisation = np.mean([result[\"utilisation\"].first() for result in original_results])\n",
+    "original_mean_time = np.mean([result[\"system_time\"].mean() for result in original_results])\n"
    ]
   },
   {
@@ -251,9 +248,9 @@
    "source": [
     "fig, ax = plt.subplots(dpi=200)\n",
     "\n",
-    "min_data = np.array(min_system_times).reshape(len(min_system_times) // seeds, seeds).min(axis=1) / original_min_time\n",
+    "min_data = np.array(min_system_times).reshape(len(min_system_times) // seeds, seeds).min(axis=1) / original_mean_time\n",
     "mean_data = np.array(mean_system_times).reshape(len(mean_system_times) // seeds, seeds).mean(axis=1) / original_mean_time\n",
-    "max_data = np.array(max_system_times).reshape(len(max_system_times) // seeds, seeds).max(axis=1) / original_max_time\n",
+    "max_data = np.array(max_system_times).reshape(len(max_system_times) // seeds, seeds).max(axis=1) / original_mean_time\n",
     "\n",
     "xs = lambda_coeff_range\n",
     "ax.fill_between(xs, min_data, max_data, alpha=0.25)\n",
