--- a/nbs/clusters.ipynb
+++ b/nbs/clusters.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,17 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7/7 [07:54<00:00, 73.71s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # APPROX. 40 minute runtime.\n",
     "\n",
@@ -160,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +194,7 @@
        "Text(0, 0.5, 'Final cost')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,19 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best run was number 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# kp = KPrototypes(n_clusters, init=\"matching\", random_state=0, n_jobs=6, verbose=1)\n",
     "# kp.fit(data, categorical=categorical)\n",
@@ -258,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +264,7 @@
        "Name: cluster, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -299,10 +283,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1c1dd5aed0>"
+       "<matplotlib.legend.Legend at 0x1c24340fd0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -344,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -435,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -469,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +915,7 @@
        "                Sepsis, %                          1.987      0.765  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
