--- a/sections/wasserstein.tex
+++ b/sections/wasserstein.tex
@@ -55,6 +55,20 @@ respectively. A proof of~\eqref{eq:wasserstein} is presented in~\cite{RTC17}.
 Then the parameter set with the smallest mean distance over a number of runs is
 taken to be the most appropriate.
 
+\begin{figure}
+    \centering%
+    \includegraphics[width=\imgwidth]{best_params}
+    \caption{A histogram of the simulated and observed length of stay data for
+             the best parameter set.}\label{fig:best_params}
+\end{figure}
+
+\begin{figure}
+    \centering%
+    \includegraphics[width=\imgwidth]{worst_params}
+    \caption{A histogram of the simulated and observed length of stay data for
+             the worst parameter set.}\label{fig:worst_params}
+\end{figure}
+
 Reiterate the objective of the paper --- to model a COPD ward within a hospital
 --- and draw attention to lack of fine-grain data. Lead into how this can be
 overcome with the Wasserstein distance (a lot of this has been written up in
