Try out a more relevant title.

--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,9 @@
 \newcommand{\imgwidth}{.85\textwidth}
 \newcommand{\tablewidth}{.9\textwidth}
 
-
 \title{%
-    Understanding COPD patients in the hospital system via administrative data
+    Reverse-engineering hospital service times via the Wasserstein distance for
+    patient cluster analysis: a case study in COPD
 }
 \author{Henry Wilde, Vincent Knight, Jonathan Gillard}
 \date{}
