Update bibstyle and slight rewording.

--- a/main.tex
+++ b/main.tex
@@ -4,11 +4,11 @@
 \usepackage[utf8]{inputenc}
 \usepackage{fullpage}
 \usepackage{setspace}
-    \doublespacing%
+    \onehalfspacing%
 
 % Bibliography, referencing
 \usepackage[numbers]{natbib}
-    \bibliographystyle{plain}
+    \bibliographystyle{abbrvnat}
 \usepackage{hyperref}
 
 % Mathematics, symbols
