Remove author list.

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
     Reverse-engineering hospital service times via the Wasserstein distance for
     patient cluster analysis: a case study in COPD
 }
-\author{Henry Wilde, Vincent Knight, Jonathan Gillard}
+\author{}
 \date{}
 
 
