--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -1,13 +1,24 @@
 \section{Adjusting the queuing model}\label{sec:scenarios}
 
-Body of the writing and plots come here. What can we see in the what-if
-scenarios? The main scenarios are:
-
+With the queuing model established and validated in
+Section~\ref{sec:wasserstein}, an investigation into the parameters of the model
+can be conducted. This section is comprised of several `what-if' scenarios --- a
+classic component of healthcare operational research --- under this novel
+parameterisation. The outcomes of interest in this work are server (resource)
+utilisation and system times as these capture the both the driving forces of
+cost and the overall state of the system. Specifically, the objective of these
+experiments is to address the following questions:
 \begin{itemize}
-    \item How would server utilisation (i.e.\ resource consumption) be affected
-        by an increase in overall patient arrivals?
-    \item How is the system affected by certain types of patients (e.g.\
-        short-stay, low-impact) arriving less frequently?
+    \item How would server utilisation be affected by a change in overall
+        patient arrivals?
     \item What are the sensitivities of mean system times and server utilisation
         based on a change in \(c\)?
+    \item How is the system affected by patients moving between clusters?
 \end{itemize}
+
+\subsection{Changes to overall patient arrivals}\label{subsec:arrivals}
+
+\subsection{Changes to resource availability}\label{subsec:resources}
+
+\subsection{Moving patients between clusters}\label{subsec:moving}
+
