Include images in main text.

--- a/main.tex
+++ b/main.tex
@@ -11,11 +11,14 @@
 
 % Images, tables
 \usepackage{graphicx}
+    \graphicspath{{img/}}
 \usepackage{booktabs}
-
+\usepackage{caption}
+\usepackage{subcaption}
 
 % Custom lengths
 \newcommand{\imgwidth}{.85\textwidth}
+\newcommand{\halfimgwidth}{.45\textwidth}
 \newcommand{\tablewidth}{.9\textwidth}
 
 
