--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -9,16 +9,47 @@ utilisation and system times as these capture the both the driving forces of
 cost and the overall state of the system. Specifically, the objective of these
 experiments is to address the following questions:
 \begin{itemize}
-    \item How would server utilisation be affected by a change in overall
-        patient arrivals?
-    \item What are the sensitivities of mean system times and server utilisation
-        based on a change in \(c\)?
+    \item How would the system be affected by a change in overall patient
+        arrivals?
+    \item How is the system affected by a change in resource availability (i.e.\
+        a change in \(c\))?
     \item How is the system affected by patients moving between clusters?
 \end{itemize}
 
+%TODO Add a disclaimer about relative values here.
+
 \subsection{Changes to overall patient arrivals}\label{subsec:arrivals}
 
+\begin{figure}
+    \centering
+    \begin{minipage}{\halfimgwidth}
+        \includegraphics[width=\linewidth]{lambda_time_logscale}
+        \captionof{figure}{A plot of \(\lambda\) scaling factor against mean
+        relative system time}\label{fig:lambda_time}
+    \end{minipage}\hfill%
+    \begin{minipage}{\halfimgwidth}
+        \includegraphics[width=\linewidth]{lambda_utilisation}
+        \captionof{figure}{A plot of \(\lambda\) scaling factor against mean
+        relative server utilisation}\label{fig:lambda_utilisation}
+    \end{minipage}
+\end{figure}
+
 \subsection{Changes to resource availability}\label{subsec:resources}
+
+\begin{figure}
+    \centering
+    \begin{minipage}{\halfimgwidth}
+        \includegraphics[width=\linewidth]{servers_time_logscale}
+        \captionof{figure}{A plot of the number of servers, \(c\), against mean
+        relative system time}\label{fig:servers_time}
+    \end{minipage}\hfill%
+    \begin{minipage}{\halfimgwidth}
+        \includegraphics[width=\linewidth]{servers_utilisation}
+        \captionof{figure}{A plot of the number of servers, \(c\), against mean
+        relative server utilisation}\label{fig:servers_utilisation}
+    \end{minipage}
+\end{figure}
+
 
 \subsection{Moving patients between clusters}\label{subsec:moving}
 
