--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -47,9 +47,22 @@ experiments is to address the following questions:
         \includegraphics[width=\linewidth]{servers_utilisation}
         \captionof{figure}{A plot of the number of servers, \(c\), against mean
         relative server utilisation}\label{fig:servers_utilisation}
-    \end{minipage}
+\end{minipage}
 \end{figure}
-
 
 \subsection{Moving patients between clusters}\label{subsec:moving}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=\imgwidth]{moving_time_logscale}
+    \caption{Plots showing the effect of proportions of each cluster moving to
+    another on the mean relative system time}\label{fig:moving_time}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\imgwidth]{moving_utilisation}
+    \caption{Plots showing the effect of proportions of each cluster moving to
+    another on the mean relative server
+    utilisation}\label{fig:moving_utilisation}
+\end{figure}
