Begin writing literature review.

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 
 % Bibliography and referencing
 \usepackage[numbers]{natbib}
+    \bibliographystyle{abbrvnat}
 \usepackage{hyperref}
 
 % Images, tables
