Continue lit review into segmentation analysis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,6 +21,30 @@
               Panagiotis Manolitzas and Nikolaos Matsatsinis",
 }
 
+@article{VMD2016,
+    author = {Vuik, Sabine and Mayer, Erik and Darzi, Ara},
+    year = {2016},
+    pages = {},
+    title = {A quantitative evidence base for population health: Applying
+             utilization-based cluster analysis to segment a patient
+             population},
+    volume = {14},
+    journal = {Population Health Metrics},
+    doi = {10.1186/s12963-016-0115-z},
+}
+
+@article{VMD2016review,
+    author = {Vuik, Sabine I. and Mayer, Erik K. and Darzi, Ara},
+    title = {Patient Segmentation Analysis Offers Significant Benefits For
+             Integrated Care And Support},
+    journal = {Health Affairs},
+    volume = {35},
+    number = {5},
+    pages = {769-775},
+    year = {2016},
+    doi = {10.1377/hlthaff.2015.1311},
+}
+
 @article{YKTT+12018,
     title = {A systematic review of the clinical application of data-driven
              population segmentation analysis},
@@ -31,4 +55,17 @@
     doi = {https://doi.org/10.1186/s12874-018-0584-9},
     author = {Shi Yan and Yu Heng Kwan and Chuen Seng Tan and Julian Thumboo and
               Lian Leng Low},
+}
+
+@article{YSKT+42019,
+    title = {Identifying heterogeneous health profiles of primary care utilizers
+             and their differential healthcare utilization and mortality – a
+             retrospective cohort study},
+    journal = {BMC Family Practice},
+    volume = {20},
+    number = {54},
+    year = {2019},
+    doi = {https://doi.org/10.1186/s12875-019-0939-2},
+    author = {Shi Yan and Benjamin Jun Jie Seng and Yu Heng Kwan and Chuen Seng
+              Tan and Joanne Hui Min Quah and Julian Thumboo and Lian Leng Low},
 }
