--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -3,12 +3,13 @@
 Population health research is becoming increasingly based on data-driven methods
 (as opposed to those designed solely by clinical experts) for patient-centred
 care through the advent of accessible software and a relative abundance of
-electronic data. To better understand the needs and behaviours of a population,
-it can be helpful to find an appropriate segmentation of that population; such a
-segmentation allows for finer-grained analysis of groups in the population that
-share some form of homogeneity. One commonly used method for such
-patient-centred analysis is that of patient flow and their interaction with the
-healthcare system.
+electronic data. Population health research concerns itself with better
+understanding the healthcare needs and behaviours of a population, so to further
+that end it can be helpful to find an appropriate segmentation of that
+population; such a segmentation allows for finer-grained analysis of groups in
+the population that share some form of homogeneity. One commonly used method for
+such patient-centred analysis is that of patient flow and their interaction with
+the healthcare system.
 
 However, this process relies heavily on detailed data --- about both the system
 and the population within that system --- which may limit research where
@@ -30,20 +31,27 @@ the Welsh health boards in an internal report by NHS Wales.
 \subsection{Literature review}\label{subsec:review}
 
 Clustering is the process of separating the instances of a dataset into distinct
-parts to maximise homogeneity within each cluster and heterogeneity
-between each cluster. Within healthcare, and particularly population health,
-this concept has many applications. When applying this to a population, some
-form of patient corpus is considered the \emph{de facto} dataset but the choice
-of characteristics with which to describe a patient or record remains
-open. The review for this work identified three groups of characteristics used
-to cluster a patient population: a patient's system utilisation metrics, their
-clinical attributes and their pathway. The first two encompass a method known as
-segmentation analysis wherein a population is segmented in a straightforward
-sense. The latter, however, does not strictly segment the patients directly
-but rather groups their movements through a healthcare system via process
-mining.~\cite{AG2018}~and~\cite{DDGM+12015} demonstrate how this technique can
-help to improve the efficiency of a hospital system rather than tackling the
-issue of patient-centred care as is the focus of this work.
+parts to maximise homogeneity within each cluster and heterogeneity between each
+cluster. Within healthcare, and particularly population health, this concept has
+many applications. When applying this to a population, some form of patient
+corpus is considered the \emph{de facto} dataset but the choice of
+characteristics with which to describe a patient or record remains open. The
+review for this work identified three groups of characteristics used to cluster
+a patient population: a patient's system utilisation metrics, their clinical
+attributes and their pathway. The first two belong to a method known as
+segmentation analysis wherein a patient population is segmented in the
+straightforward sense. The latter, however, does not strictly segment the
+patients directly but rather groups their movements through a healthcare system
+via process mining.~\cite{AG2018}~and~\cite{DDGM+12015} demonstrate how this
+technique can help to improve the efficiency of a hospital system rather than
+tackling the issue of patient-centred care as is the focus of this work.
+
+Segmentation analysis is an expanding part of population health literature as it
+allows for the targeted analysis of heterogeneous datasets and simplified
+communication of patient needs to stakeholders within a healthcare
+system~\cite{VMD2016review, YKTT+12018}. For instance, profiling often forms
+part of segmentation analysis where each segment can be summarised in a phrase
+or infographic~\cite{VMD2016, YSKT+42019}.
 
 % TODO Brief literature review of:
 %       - clustering patient corpus
