Add section for dataset overview.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -58,6 +58,13 @@ or infographic~\cite{VMD2016, YSKT+42019}.
 %       - reverse-engineering model parameters in healthcare ???
 %       - queuing in healthcare
 
+\subsection{Overview of dataset}\label{subsec:overview}
+
+The dataset used in this work was provided by the Cwm Taf Morgannwg UHB as part
+of an ongoing research project with the authors. The dataset contains a
+spell-level summary of 5,243 patients presenting COPD from February 2011 through
+March 2019 totalling 10,881 spells. 
+
 \subsection{Cluster analysis}\label{subsec:clusters}
 
 \begin{table}
