Fix clustering experiment code (#13)
* Add packages and placeholder inputs to main

* Bare bones skeleton written.

* Add in beginnings of treatment segmentation plots.

* Write preamble to scenarios section.

* Add image files for first two experiments.

Still working on the format for moving clusters.

* Include images in main text.

* Finish first pass at moving clusters images.

* Add moving clusters plots to paper.

* Increase contrast for moving cluster plots.

* Update scenarios notebook.

* Update code to get desired clustering.

* Up final n_init to 50

--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,44 @@
 \documentclass{article}
 
+% Setting up the page
+\usepackage[margin=1in, includefoot, footskip=30pt]{geometry}
+\usepackage{setspace}
+    \doublespacing%
 
-\title{Investigating interaction of COPD patients in the hospital system}
+% Bibliography and referencing
+\usepackage[numbers]{natbib}
+\usepackage{hyperref}
+
+% Images, tables
+\usepackage{graphicx}
+    \graphicspath{{img/}}
+\usepackage{booktabs}
+\usepackage{caption}
+\usepackage{subcaption}
+
+% Custom lengths
+\newlength{\imgwidth}
+\setlength{\imgwidth}{.9\textwidth}
+\newlength{\halfimgwidth}
+\setlength{\halfimgwidth}{.5\imgwidth}
+
+
+\title{%
+    Understanding COPD patients in the hospital system via administrative data
+}
 \author{Henry Wilde, Vincent Knight, Jonathan Gillard}
 \date{}
 
+
 \begin{document}
 \maketitle
+
+\input{sections/abstract}
+\input{sections/intro}
+\input{sections/wasserstein}
+\input{sections/scenarios}
+\input{sections/conclusion}
+
+\bibliography{bibliography}
 
 \end{document}
