Update image formats for interventions.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -58,7 +58,7 @@ or infographic~\cite{VMD2016, YSKT+42019}.
 %       - reverse-engineering model parameters in healthcare ???
 %       - queuing in healthcare
 
-\subsection{Overview of dataset}\label{subsec:overview}
+\subsection{Overview of the dataset}\label{subsec:overview}
 
 The dataset used in this work was provided by the Cwm Taf Morgannwg UHB as part
 of an ongoing research project with the authors. The dataset contains a
